--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -9,7 +9,11 @@
 }
 
 .about {
+  width: 40vh;
+
   &__myself {
+    justify-content: flex-start;
+
     &.flex {
       justify-content: flex-start;
     }
@@ -65,6 +69,63 @@
       p {
         span {
           font-size: 2.5rem;
+        }
+      }
+    }
+  }
+
+  .skill {
+    &__icons {
+      justify-content: flex-start;
+      gap: 1.5rem;
+
+      .icons {
+        .icons__el {
+          width: 4rem;
+          height: 4rem;
+
+          &-1 {
+            color: red;
+          }
+
+          &-2 {
+            color: rgb(84, 84, 251);
+          }
+
+          &-3 {
+            color: rgb(232, 232, 50);
+          }
+
+          &-4 {
+            color: skyblue;
+          }
+
+          &-5 {
+            color: green;
+          }
+
+          &-6 {
+            color: rgb(71, 111, 232);
+          }
+
+          &-7 {
+            color: green;
+          }
+
+          &-8 {
+            color: rgb(71, 111, 232);
+          }
+          &-9 {
+            color: rgb(71, 111, 232);
+          }
+
+          &-10 {
+            color: black;
+          }
+
+          &-11 {
+            color: rgb(0, 64, 255);
+          }
         }
       }
     }
