--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,4 +1,4 @@
-:root {
+root {
   --color-white: #fffffa;
   --color-black: #001021;
   --color-black-2: #787878;
@@ -9,17 +9,20 @@
 }
 
 .about {
-  width: 40vh;
+  width: 100%;
+
+  @media only screen and (max-width: 27.5em) {
+    padding: 2rem !important;
+  }
 
   &__myself {
-    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 6rem;
+    width: 100%;
 
     &.flex {
       justify-content: flex-start;
     }
-
-    gap: 6rem;
-    width: 80%;
 
     .img {
       width: 35rem;
@@ -42,14 +45,16 @@
       &.flex {
         flex-direction: column;
         justify-content: center;
-        text-wrap: wrap;
+        flex-wrap: wrap;
       }
 
       .img {
         width: 30rem;
+        align-self: flex-start;
       }
 
       p {
+        // width: 80%;
         font-size: 2.5rem;
 
         span {
@@ -74,14 +79,28 @@
   }
 
   .skill {
+    width: 100%;
+    &.flex {
+      width: 100%;
+      flex-direction: column;
+      align-items: flex-start;
+    }
     &__icons {
       justify-content: flex-start;
+      flex-wrap: wrap;
       gap: 1.5rem;
 
       .icons {
+        padding: 0.5rem;
+        padding-bottom: 0.5rem;
+
         .icons__el {
-          width: 4rem;
-          height: 4rem;
+          padding: 1rem;
+          width: 6rem;
+          height: 6rem;
+          border-radius: 4rem;
+          border-top: 4px outset #dcdada;
+          border-left: 4px outset #dcdada;
 
           &-1 {
             color: red;
