gapline width modified

--- a/src/Components/GapLine/GapLine.css
+++ b/src/Components/GapLine/GapLine.css
@@ -3,7 +3,7 @@
 }
 .gapline hr {
   margin-top: 6rem;
-  width: 6rem;
+  width: 4rem;
   border: none;
-  border-top: 1rem dotted #fb8873;
+  border-top: 1rem dotted #dedede;
 }/*# sourceMappingURL=GapLine.css.map */
