--- a/src/Components/GapLine/GapLine.scss
+++ b/src/Components/GapLine/GapLine.scss
@@ -3,9 +3,9 @@
 
   hr {
     margin-top: 6rem;
-    width: 6rem;
+    width: 4rem;
     // height: 1rem;
     border: none;
-    border-top: 1rem dotted #fb8873;
+    border-top: 1rem dotted #dedede;
   }
 }
