--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -9,12 +9,15 @@
 }
 
 .work {
-  padding: 4rem;
+  background-color: var(--color-grey);
+  padding: 6rem !important;
+  padding-bottom: 10rem !important;
+  margin-top: 4rem;
 }
 .work__list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 20vw;
+  grid-template-rows: 15vw;
   grid-gap: 4rem;
 }
 @media only screen and (max-width: 48.5em) {
@@ -26,6 +29,7 @@
 .work__item {
   border-radius: 1rem;
   overflow: hidden;
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
 }
 .work__item .img {
   display: block;
@@ -35,6 +39,9 @@
   height: 100%;
   cursor: pointer;
   transition: all 0.6s;
+}
+.work__item:hover img {
+  transform: scale(1.1);
 }
 .work__item p {
   text-transform: uppercase;
