--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -21,7 +21,7 @@
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 .header .nav h1 {
-  flex: 0 0 20%;
+  flex: 0 0 30%;
 }
 .header .nav__list {
   flex: 0 0 50%;
@@ -82,5 +82,10 @@
     display: block;
     visibility: visible;
     font-size: 3rem;
+  }
+}
+@media only screen and (max-width: 27.5em) {
+  .header .nav h1 {
+    flex: 0 0 80%;
   }
 }/*# sourceMappingURL=Navbar.css.map */
