--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -75,6 +75,11 @@ root {
   flex-direction: column;
   align-items: flex-start;
 }
+.about .skill p {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  font-weight: 500;
+}
 .about .skill__icons {
   justify-content: flex-start;
   flex-wrap: wrap;
