--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -80,11 +80,19 @@ root {
 
   .skill {
     width: 100%;
+
     &.flex {
       width: 100%;
       flex-direction: column;
       align-items: flex-start;
     }
+
+    p {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      font-weight: 500;
+    }
+
     &__icons {
       justify-content: flex-start;
       flex-wrap: wrap;
