--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -30,6 +30,10 @@
     top: 18%;
     left: 15%;
 
+    h2 {
+      font-family: "Pacifico", cursive !important;
+    }
+
     p {
       font-size: 2rem;
 
