--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,29 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-black);
   background-color: var(--color-white);
+}
+
+h1 {
+  font-family: "pacifico", cursive;
+  font-size: 3rem;
+}
+
+h3 {
+  font-weight: 700;
+  display: inline-block;
+  border-bottom: 3px solid var(--color-red);
+}
+
+h4 {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
 }
 
 ::selection {
@@ -66,5 +83,11 @@ a {
 @media only screen and (max-width: 48.5em) {
   .heading__tertiary {
     margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (max-width: 27.5em) {
+  h1 {
+    font-size: 2.5rem;
   }
 }
